--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 app:column_count="1"
-                android:background="@color/divider"
                 android:cacheColorHint="@android:color/transparent"
                 android:id="@+id/recycler_view"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp" />
+                android:layout_margin="12dp" />
 
         </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
